Working on blog side "

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1235,6 +1235,7 @@ ul, ol {
 }
 .room-details-item img {
 	margin-bottom: 40px;
+	width: ;
 }
 .room-details-item .rd-text .rd-title {
 	overflow: hidden;
