--- a/templates/res_system/room_list.html
+++ b/templates/res_system/room_list.html
@@ -51,7 +51,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <a href="" class="primary-btn">More Details</a>
+                            <a href="{{ room.get_absolute_url }}" class="primary-btn">More Details</a>
                         </div>
                     </div>
                 </div>
