Working on problems

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,19 +60,11 @@
         </div>
         <nav class="mainmenu mobile-menu">
             <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./rooms.html">Rooms</a></li>
-                <li><a href="./about-us.html">About Us</a></li>
-                <li><a href="./pages.html">Pages</a>
-                    <ul class="dropdown">
-                        <li><a href="./room-details.html">Room Details</a></li>
-                        <li><a href="#">Deluxe Room</a></li>
-                        <li><a href="#">Family Room</a></li>
-                        <li><a href="#">Premium Room</a></li>
-                    </ul>
-                </li>
-                <li><a href="./blog.html">News</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li class="{% if request.resolver_match.url_name == 'home' %}active{% endif %}"><a href="{% url 'res_system:home' %}">Home</a></li>
+                <li><a href="{% url 'res_system:room_list' %}">Rooms</a></li>
+                <li><a href="{% url 'res_system:about' %}">About Us</a></li>
+                <li><a href="{% url 'blog:blog_list' %}">News</a></li>
+                <li><a href="{% url 'res_system:contact' %}">Contact</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -110,7 +102,7 @@
                             </div>
                             <a href="#" class="bk-btn">Booking Now</a>
                             <div class="language-option">
-                                <img src="img/flag.jpg" alt="">
+                                <img src="{% static 'img/flag.jpg' %}" alt="">
                                 <span>EN <i class="fa fa-angle-down"></i></span>
                                 <div class="flag-dropdown">
                                     <ul>
@@ -129,8 +121,8 @@
                 <div class="row">
                     <div class="col-lg-2">
                         <div class="logo">
-                            <a href="./index.html">
-                                <img src="img/logo.png" alt="">
+                            <a href="{% url 'res_system:home' %}">
+                                <img src="{% static 'img/logo.png' %}" alt="">
                             </a>
                         </div>
                     </div>
@@ -138,23 +130,19 @@
                         <div class="nav-menu">
                             <nav class="mainmenu">
                                 <ul>
-                                    <li class="active"><a href="./index.html">Home</a></li>
-                                    <li><a href="./rooms.html">Rooms</a></li>
-                                    <li><a href="./about-us.html">About Us</a></li>
-                                    <li><a href="./pages.html">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="./room-details.html">Room Details</a></li>
-                                            <li><a href="./blog-details.html">Blog Details</a></li>
-                                            <li><a href="#">Family Room</a></li>
-                                            <li><a href="#">Premium Room</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="./blog.html">News</a></li>
-                                    <li><a href="./contact.html">Contact</a></li>
+                                    <li class="active"><a href="{% url 'res_system:home' %}">Home</a></li>
+                                    <li><a href="{% url 'res_system:room_list' %}">Rooms</a></li>
+                                    <li><a href="{% url 'res_system:about' %}">About Us</a></li>
+                                    <li><a href="{% url 'blog:blog_list' %}">News</a></li>
+                                    <li><a href="{% url 'res_system:contact' %}">Contact</a></li>
                                 </ul>
                             </nav>
                             <div class="nav-right search-switch">
                                 <i class="icon_search"></i>
+                                <form action="{% url 'res_system:search' %}" method="POST">
+                                    {% csrf_token %}
+                                    {{ form }}
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -177,7 +165,7 @@
                         <div class="ft-about">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="img/footer-logo.png" alt="">
+                                    <img src="{% static 'img/footer-logo.png' %}" alt="">
                                 </a>
                             </div>
                             <p>We inspire and reach millions of travelers<br /> across 90 local websites</p>
