--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,18 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    
     <!-- Blog Details Hero Section Begin -->
-    <section class="blog-details-hero set-bg" data-setbg="{{ post.image.url }}">
+    <section class="blog-details-hero set-bg" data-setbg="img/blog/blog-details/blog-details-hero.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     <div class="bd-hero-text">
-                        <span>{{ post.category }}</span>
-                        <h2>{{ post.title }}</h2>
+                        <span>Travel Trip & Camping</span>
+                        <h2>Cdc Issues Health Alert Notice For Travelers To Usa From Hon</h2>
                         <ul>
-                            <li class="b-time"><i class="icon_clock_alt"></i>  {{ post.date_posted|date:" jS F, Y" }}</li>
-                             <li><i class="icon_profile"></i>{{ post.author }}</li> <!-- need add and set profile name -->
+                            <li class="b-time"><i class="icon_clock_alt"></i> 15th April, 2019</li>
+                            <li><i class="icon_profile"></i> Kerry Jones</li>
                         </ul>
                     </div>
                 </div>
@@ -28,39 +27,57 @@
                 <div class="col-lg-10 offset-lg-1">
                     <div class="blog-details-text">
                         <div class="bd-title">
-                            <p>{{ post.content|truncatewords:150|safe }}</p>
+                            <p>Thinking about overseas adventure travel? Have you put any thought into the best places
+                                to go when it comes to overseas adventure travel? Nepal is one of the most popular
+                                places of all, when you visit this magical country you will have the best adventures
+                                right there at your doorstep. Only overseas adventure travel in Nepal will give you
+                                these kinds of opportunities so if this is not on your list of possible places to visit
+                                yet then now is the time to put it on there!</p>
+                            <p>In Nepal your overseas adventure travel is going to be fascinating. You will get to see
+                                the Himalayan Mountains and experience all that the rich Nepalese culture has to offer.
+                                They are an amazing people who have managed to hang on to their own culture and beliefs
+                                longer than most other countries. When overseas adventure travel takes you to Nepal you
+                                will have the chance to see all of the fantastic and one of a kind lakes and forests and
+                                you can even spend days or weeks camping out in their forests with a specialized guide.
+                                And the waterfalls in Nepal are to die for, you will never see anything more gorgeous in
+                                your life as their waterfalls! This should be at the top of your overseas adventure
+                                travel destination list for sure!</p>
                         </div>
-                        {% if post.tagline_images %}
-                            {% for t_image in post.tagline_images %}
-                            <div class="bd-pic">
-                                <div class="bp-item">
-                                    <img src="{{ t_image.url }}" alt="">
-                                </div>
-                                {% endfor %}
+                        <div class="bd-pic">
+                            <div class="bp-item">
+                                <img src="img/blog/blog-details/blog-details-1.jpg" alt="">
+                            </div>
+                            <div class="bp-item">
+                                <img src="img/blog/blog-details/blog-details-2.jpg" alt="">
+                            </div>
+                            <div class="bp-item">
+                                <img src="img/blog/blog-details/blog-details-3.jpg" alt="">
+                            </div>
                         </div>
-                        {% endif %}
                         <div class="bd-more-text">
                             <div class="bm-item">
-                                <p>{{ post.content|truncatewords:250|safe }}</p>
+                                <h4>If you live in New York City</h4>
+                                <p>You know all about the traffic there. Getting places is often next to impossible,
+                                    even with the gazillion yellow cabs. If you’re like me you often look with envy at
+                                    those shiny limousines with their unformed drivers and wish you could sit in one.
+                                    Well, you can. New York limo service is more affordable than you think, whether it’s
+                                    for Newark airport transportation, LaGuardia airport transportation, or to drive
+                                    wherever you wish to go.</p>
                             </div>
                             <div class="bm-item">
-                                <p>{{ post.content|truncatewords:400|safe }}</p>
+                                <h4>Every time I hail a cab in New York City</h4>
+                                <p>I hope I’ll be lucky enough to get one that’s halfway decent and that the driver
+                                    actually speaks English. I have spent many anxious moments wondering if I ever get
+                                    to my destination. Or whether I’d get ripped off. Even if all goes well, I can’t say
+                                    I can remember many rides in New York cabs that were very pleasant. And given how
+                                    much they cost by now, going with a limo makes ever more sense.</p>
                             </div>
-                            <!-- <li><img style="width:20px" src="https://img.icons8.com/ios-glyphs/30/000000/visible--v1.png"/><span class="pl-2">{{post.views}}</span></li> -->
-                        <form style="display: inline-block;" action="{% url 'blog:like_post' post.pk %}" method="post">
-                            {% csrf_token %}
-                            <button type="submit" name="post_id" value='{{post.pk}}' class="btn btn-light btn-sm"><img style="width:25px" src="https://img.icons8.com/material-sharp/50/000000/facebook-like.png"/><span class="pl-2">{{post.total_likes}}</span></button>
-                        </form>
-                        <form style="display: inline-block;" action="{% url 'blog:dislike_post' post.pk %}" method="post">
-                            {% csrf_token %}
-                            <button type="submit" name="post_id" value='{{post.pk}}' class="btn btn-light btn-sm"><img style="width:25px" src="https://img.icons8.com/material/24/000000/thumbs-down--v1.png"/><span class="pl-2">{{post.total_dislikes}}</span></button>
-                        </form>
                         </div>
                         <div class="tag-share">
                             <div class="tags">
-                                {% for tag in post.tags.all %}
-                                    <a href="#">{{ tag.name }}</a>    
-                                {% endfor %}
+                                <a href="#">Travel Trip</a>
+                                <a href="#">Camping</a>
+                                <a href="#">Event</a>
                             </div>
                             <div class="social-share">
                                 <span>Share:</span>
