Working on search form"

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,12 +60,13 @@
         </div>
         <nav class="mainmenu mobile-menu">
             <ul>
-                <li class="{% if request.resolver_match.url_name == 'home' %}active{% endif %}"><a href="{% url 'res_system:home' %}">Home</a></li>
+                <li class="{% if request.resolver_match.url_name == 'home' %}active{% endif %}"><a
+                        href="{% url 'res_system:home' %}">Home</a></li>
                 <li><a href="{% url 'res_system:room_list' %}">Rooms</a></li>
                 <li><a href="{% url 'res_system:about' %}">About Us</a></li>
-                <li><a href="{% url 'blog:blog_list' %}">News</a></li>
                 <li><a href="{% url 'res_system:contact' %}">Contact</a></li>
             </ul>
+            <li><a href="{% url 'blog:blog_list' %}">News</a></li>
         </nav>
         <div id="mobile-menu-wrap"></div>
         <div class="top-social">
@@ -139,10 +140,10 @@
                             </nav>
                             <div class="nav-right search-switch">
                                 <i class="icon_search"></i>
-                                <form action="{% url 'res_system:search' %}" method="POST">
+                                <!-- <form action="{% url 'res_system:search' %}" method="POST">
                                     {% csrf_token %}
                                     {{ form }}
-                                </form>
+                                </form> -->
                             </div>
                         </div>
                     </div>
@@ -153,9 +154,9 @@
     <!-- Header End -->
 
     {% block content %}
-        
+
     {% endblock %}
-    
+
     <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container">
@@ -192,8 +193,9 @@
                         <div class="ft-newslatter">
                             <h6>New latest</h6>
                             <p>Get the latest updates and offers.</p>
-                            <form action="#" class="fn-form">
-                                <input type="text" placeholder="Email">
+                            <form action="#" class="fn-form" method="post">
+                                {% csrf_token %}
+                                {{ newsletter_form }}
                                 <button type="submit"><i class="fa fa-send"></i></button>
                             </form>
                         </div>
@@ -208,12 +210,14 @@
     <div class="search-model">
         <div class="h-100 d-flex align-items-center justify-content-center">
             <div class="search-close-switch"><i class="icon_close"></i></div>
-            <form class="search-model-form">
+            <form class="search-model-form" method="post">
+                {% csrf_token %}
+                {{ search_form.content }}
                 <input type="text" id="search-input" placeholder="Search here.....">
             </form>
         </div>
     </div>
-    <!-- Search model end -->   
+    <!-- Search model end -->
 
     <!-- Js Plugins -->
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
