--- a/templates/res_system/contact.html
+++ b/templates/res_system/contact.html
@@ -33,16 +33,17 @@
                     </div>
                 </div>
                 <div class="col-lg-7 offset-lg-1">
-                    <form action="#" class="contact-form">
+                    <form action="#" class="contact-form" method="post">
+                        {% csrf_token %}
                         <div class="row">
                             <div class="col-lg-6">
-                                <input type="text" placeholder="Your Name">
+                                {{ mail_form.name }}
                             </div>
                             <div class="col-lg-6">
-                                <input type="text" placeholder="Your Email">
+                                 {{ mail_form.email }}
                             </div>
                             <div class="col-lg-12">
-                                <textarea placeholder="Your Message"></textarea>
+                                {{ mail_form.message }}
                                 <button type="submit">Submit Now</button>
                             </div>
                         </div>
